--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,40 @@
 .footer{
     background-color: $color-secondary;
     grid-column: full-start / full-end;
+    padding: 8rem;
+}
+
+.nav{
+    list-style: none;
+    display: flex;
+    gap: 2rem;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    &__link:link,
+    &__link:visited{
+        font-size: 1.4rem;
+        color: #fff;
+        text-decoration: none;
+        font-family: $font-display;
+        text-transform: uppercase;
+        text-align: center;
+        padding: 1.5rem;
+        display: block;
+        
+        min-width: 20rem;
+        transition: all .2s;
+    }
+    &__link:hover,
+    &__link:active{
+        background-color: rgba(#fff,.05);
+        transform: translateY(-3px);
+    }
+}
+.copyright{
+    text-align: center;
+    color: $color-grey-light-2;
+    font-size: 1.4rem;
+    width: 70%;
+    margin: 6rem auto 0;
 }
