created responsive layout

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,11 +4,17 @@
     background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url(../img/hero.jpeg);
     background-position: center;
     display: grid;
-    grid-template-rows: 1fr min-content 6rem 1fr;
+    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
     gap: 1.5rem;
     padding: 4rem 8rem 8rem;
-    grid-template-columns: max-content;
+    grid-template-columns: minmax(min-content, max-content);
     justify-content: center;
+    @media only screen and (max-width: $bp-medium){
+        grid-column: 1 / -1;
+    }
+    @media only screen and (max-width: $bp-small){
+        padding: 5rem;
+    }
     &__logo{
         height: 3rem;
         justify-self: center;
@@ -39,7 +45,8 @@
         justify-items: center;
         gap: 3rem;
         img{
-            height: 2.5rem;
+            max-height: 2.5rem;
+            max-width: 100%;
             filter: brightness(70%);
         }
     }
