--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -4,6 +4,12 @@
     grid-row: 1 / -1;
     display: flex;
     justify-content: center;
+    @media only screen and (max-width: $bp-large){
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
+        justify-content: flex-end;
+        align-items: center;
+    }
 }
 .nav-btn{
     border: none;
@@ -13,7 +19,7 @@
     height: 2px;
     width: 4.5rem;
     margin-top: 4rem;
-
+    
     &::before,
     &::after{
         content: '';
@@ -27,5 +33,16 @@
     }
     &::after{
         transform: translateY(1.3rem);
+    }
+    @media only screen and (max-width: $bp-large){
+        margin-top: 0;
+        margin-right: 2rem;
+
+        &::before{
+            transform: translateY(-1.2rem);
+        }
+        &::after{
+            transform: translateY(1rem);
+        }
     }
 }
