--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -7,13 +7,21 @@
     align-content: center;
     justify-items: center;
     row-gap: 2rem;
-
+    @media only screen and (max-width: $bp-medium){
+        grid-column: 1 / -1;
+    }
     &__list{
         display: grid;
         grid-template-columns: min-content max-content;
         align-items: center;
         column-gap: 2rem;
         row-gap: 5vh;
+        @media only screen and (max-width: $bp-medium){
+            grid-template-columns: repeat(3, min-content max-content);
+        }
+        @media only screen and (max-width: $bp-small){
+            grid-template-columns: min-content max-content;  
+        }
     }
     &__img{
         width: 7rem;
